--- a/config/dataset_for_test_pipeline/config.yml
+++ b/config/dataset_for_test_pipeline/config.yml
@@ -128,7 +128,7 @@ to_save_model: True
 save_model_file: 'best_model_entqtkg'
 pred_file: 'pred_entqtkg'
 load_model_file: 'best_model_entqtkg'
-model_folder:
+model_folder: "model"
 TCE: True
 TSE: True
 TE: True
